--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^12.4.0",
+    "gaxios": "^7.1.3",
     "google-auth-library": "^10.5.0",
+    "lucide-react": "^0.555.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
