--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,12 @@
     "lucide-react": "^0.555.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
     "react-scripts": "5.0.1",
     "recharts": "^3.5.1",
+    "sweetalert2": "^11.26.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
